--- a/index-debug.html
+++ b/index-debug.html
@@ -30,6 +30,9 @@
 </head>
 
 <body onload="init();" onselectstart="return false;">
+  <iframe src="http://www.facebook.com/plugins/like.php?href=http://webgames.freeze-dev.com/ghostchaos"
+        scrolling="no" frameborder="0"
+        style="border:none; width:450px; height:80px"><iframe>
 
   <noscript>
     <div align="center" style="font-weight: bold;">
@@ -91,7 +94,7 @@
     <div id="credits" class="gameState">
       <span id="title">Credits / About</span>
       <br /><br /><br />
-      <span>(C) 2011 Johannes Stein<br /><a href="http://www.freeze-dev.com" target="_blank">http://www.freeze-dev.com</a><br />Version 1.2<br /><br />Komika Display Bold font by <a href="http://www.fontsquirrel.com/foundry/Apostrophic-Labs">Apostrophic Labs</a></span><br />
+      <span>(C) 2011 Johannes Stein<br /><a href="http://www.freeze-dev.com" target="_blank">http://www.freeze-dev.com</a><br />Version 1.3<br /><br />Komika Display Bold font by <a href="http://www.fontsquirrel.com/foundry/Apostrophic-Labs">Apostrophic Labs</a></span><br />
       <br />
       <span class="button"><a href="javascript:void(0)" onclick="switchGameState('mainmenu')">Back</a></span><br />
     </div>
